--- a/src/app/pages/connect/myconversations/myconversations.page.html
+++ b/src/app/pages/connect/myconversations/myconversations.page.html
@@ -9,7 +9,7 @@
           <a *ngIf="platform.is('ios')" href="https://itunes.apple.com/us/app/restvo-connect-with-churches/id1365903479?ls=1&mt=8" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
           <a *ngIf="platform.is('android')" href="https://play.google.com/store/apps/details?id=com.restvo.app" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="arrow-forward-outline" color="primary" slot="end"></ion-icon>
         <!--<ion-button fill="clear" slot="end"><ion-icon name="close"></ion-icon></ion-button>-->
       </ion-item>
       <ion-item-options>
@@ -91,7 +91,7 @@
           <ion-label class="ion-margin-top">Enable Push Notification</ion-label>
           <p class="message-detail">Get notified when other Restvo users message you.</p>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="arrow-forward-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
       <ion-item-options>
         <ion-item-option color="primary" (click)="dismissEnablePushNotification()">
@@ -108,7 +108,7 @@
           <ion-label class="ion-margin-top">Import Address Book</ion-label>
           <p class="message-detail">Connect with friends, family, and coworkers on Restvo.</p>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="arrow-forward-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
       <ion-item-options>
         <ion-item-option color="primary" (click)="dismissImportContactList()">
