--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -2,7 +2,7 @@
   <ion-header no-border>
     <ion-toolbar class="header-toolbar" lines="none" mode="ios">
       <ion-buttons class="header-buttons" slot="start">
-        <ion-button (click)="closeModal()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+        <ion-button (click)="closeModal()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
