--- a/src/app/pages/discover/discover/discover.page.html
+++ b/src/app/pages/discover/discover/discover.page.html
@@ -9,7 +9,7 @@
           <a *ngIf="platform.is('ios')" href="https://itunes.apple.com/us/app/restvo-connect-with-churches/id1365903479?ls=1&mt=8" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
           <a *ngIf="platform.is('android')" href="https://play.google.com/store/apps/details?id=com.restvo.app" style="font-size: 14px; color: var(--ion-color-button1)">Download app for better experience</a>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="arrow-forward-outline" color="primary" slot="end"></ion-icon>
         <!--<ion-button fill="clear" slot="end"><ion-icon name="close"></ion-icon></ion-button>-->
       </ion-item>
       <ion-item-options>
@@ -49,7 +49,7 @@
           <ion-label class="ion-margin-top">Complete Your Profile</ion-label>
           <p class="message-detail">Answer a few questions to complete your profile.</p>
         </div>
-        <ion-icon name="ios-arrow-forward" color="primary" slot="end"></ion-icon>
+        <ion-icon name="arrow-forward-outline" color="primary" slot="end"></ion-icon>
       </ion-item>
       <ion-item-options>
         <ion-item-option color="primary" (click)="authService.incompleteOnboardProcess = null">
