--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.html
@@ -1,7 +1,7 @@
 <ion-header id="pickfeature-header">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="back()" id="back-button"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button (click)="back()" id="back-button"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{title}}</ion-title>
     <ion-buttons slot="end">
