--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="close()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button (click)="close()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{title}}</ion-title>
     <ion-buttons id="done" slot="end">
@@ -48,7 +48,7 @@
           </ion-avatar>
           {{obj.data.name}}
           <ion-icon slot="end" color="tertiary" *ngIf="!obj.select" name="radio-button-off"></ion-icon>
-          <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="ios-checkmark-circle"></ion-icon>
+          <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="checkmark-circle"></ion-icon>
         </ion-item>
         <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'group' || filter === 'both') && obj.conversation.type === 'group'">
           <ion-avatar slot="start">
@@ -57,7 +57,7 @@
           </ion-avatar>
           {{obj.conversation.group.name}}
           <ion-icon slot="end" color="tertiary" *ngIf="!obj.select" name="radio-button-off"></ion-icon>
-          <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="ios-checkmark-circle"></ion-icon>
+          <ion-icon slot="end" color="tertiary" *ngIf="obj.select" name="checkmark-circle"></ion-icon>
         </ion-item>
       </div>
     </ion-virtual-scroll>
@@ -70,7 +70,7 @@
         </ion-avatar>
         {{person.name}}
         <ion-icon color="button1" *ngIf="!person.select" name="radio-button-off" slot="end"></ion-icon>
-        <ion-icon color="button1" *ngIf="person.select" name="ios-checkmark-circle" slot="end"></ion-icon>
+        <ion-icon color="button1" *ngIf="person.select" name="checkmark-circle" slot="end"></ion-icon>
       </ion-item>
     </ion-list>
     <ion-infinite-scroll position="bottom" (ionInfinite)="loadMoreAppUsers($event)">
