--- a/src/app/pages/group/groupchat/groupchat.page.html
+++ b/src/app/pages/group/groupchat/groupchat.page.html
@@ -1,8 +1,8 @@
 <ion-header *ngIf="chatService.currentChatProps[propIndex]">
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
-      <ion-button *ngIf="!modalPage" color="secondary" disabled="true"><ion-icon name="arrow-back"></ion-icon></ion-button>
-      <ion-button (click)="closeModal(false)" *ngIf="modalPage"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button *ngIf="!modalPage" color="secondary" disabled="true"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal(false)" *ngIf="modalPage"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
       <div style="width: 36px" *ngIf="modalPage && platform.width() >= 768"></div>
       <div style="width: 36px"></div>
     </ion-buttons>
@@ -179,7 +179,7 @@
             </ion-row>
             <ion-row class="ion-justify-content-end">
               <ion-col>
-                <ion-icon class="reply-icon photo" name="undo" (click)="sendQuoteAndReply(message)"></ion-icon>
+                <ion-icon class="reply-icon photo" name="arrow-undo" (click)="sendQuoteAndReply(message)"></ion-icon>
               </ion-col>
             </ion-row>
           </ion-grid>
@@ -207,8 +207,8 @@
             <!-- Detect if a video is embedded in the text -->
             <div class="video-frame youtube" plyr [plyrSources]="[{ 'src': message.body.substring(message.body.indexOf('a href') + 8, message.body.indexOf(' target') - 1), 'provider': 'youtube'}]" [plyrOptions]="resourceService.plyrOptions" (plyrInit)="initPlyr($event, message._id)" *ngIf="message.body && message.body.indexOf('www.youtube.com/watch?v=') > -1" (click)="resourceService.clickVideo($event, [{ 'src': message.body.substring(message.body.indexOf('a href') + 8, message.body.indexOf(' target') - 1), 'provider': 'youtube' }])"></div>
 
-            <ion-icon *ngIf="message.body?.length <= 30" class="reply-icon-short" name="undo" (click)="sendQuoteAndReply(message)"></ion-icon>
-            <ion-icon *ngIf="message.body?.length > 30" class="reply-icon" name="undo" (click)="sendQuoteAndReply(message)"></ion-icon>
+            <ion-icon *ngIf="message.body?.length <= 30" class="reply-icon-short" name="arrow-undo" (click)="sendQuoteAndReply(message)"></ion-icon>
+            <ion-icon *ngIf="message.body?.length > 30" class="reply-icon" name="arrow-undo" (click)="sendQuoteAndReply(message)"></ion-icon>
           </div>
         </div>
       </ion-item>
@@ -380,7 +380,7 @@
             <div class="status-div">
               <p class="status" id="failed" *ngIf="message.status === 'failed'" (click)="resendMessage(message)">Not Sent</p>
               <p class="status"  *ngIf="message.status === 'confirmed'">Delivered</p>
-              <!--<ion-icon class="status" *ngIf="message.status === 'failed'" name="alert" (click)="resendMessage(message)"></ion-icon>-->
+              <!--<ion-icon class="status" *ngIf="message.status === 'failed'" name="alert-circle" (click)="resendMessage(message)"></ion-icon>-->
               <!--<ion-icon class="status" *ngIf="message.status === 'confirmed'" name="checkmark"></ion-icon>-->
             </div>
           </div>
@@ -429,13 +429,13 @@
         </ion-button>
         <div id="expandable-right" *ngIf="moreMediaOptions">
           <ion-button class="moreButton" fill="clear" (click)="takePhotoAndUpload()" [disabled]="!chatFinishedLoading">
-            <ion-icon name="md-camera" size="large" color="grey"></ion-icon>
+            <ion-icon ios="camera-sharp" md="camera-sharp" size="large" color="grey"></ion-icon>
           </ion-button>
           <ion-button class="moreButton" *ngIf="platform.is('cordova')" fill="clear" (click)="selectPhotoFromDeviceAndUpload($event)" [disabled]="!chatFinishedLoading">
-            <ion-icon name="md-image" size="large" color="grey"></ion-icon>
+            <ion-icon ios="image-sharp" md="image-sharp" size="large" color="grey"></ion-icon>
           </ion-button>
           <ion-button class="moreButton" *ngIf="!platform.is('cordova')" fill="clear" [hidden]="!chatFinishedLoading">
-            <label for="image" style="height: 32px"><ion-icon name="md-image" size="large" color="grey"></ion-icon></label>
+            <label for="image" style="height: 32px"><ion-icon ios="image-sharp" md="image-sharp" size="large" color="grey"></ion-icon></label>
             <input type="file" class="file-picker" name="image" id="image" (change)="selectPhotoFromDeviceAndUpload($event)" accept="image/*" />
           </ion-button>
           <ion-button class="moreButton" fill="clear" [hidden]="!chatFinishedLoading">
@@ -444,7 +444,7 @@
           </ion-button>
         </div>
         <ion-button class="moreButton" fill="clear" (click)="moreMediaOptions = !moreMediaOptions" [hidden]="moreMediaOptions">
-          <ion-icon name="ios-arrow-forward" size="large" color="grey"></ion-icon>
+          <ion-icon name="arrow-forward-outline" size="large" color="grey"></ion-icon>
         </ion-button>
       </ion-buttons>
       <ion-textarea rows="1" [minRows]="1" [maxRows]="5" autosize [(ngModel)]="composedMessage" autocapitalize (ionFocus)="moreMediaOptions = false">
@@ -515,7 +515,7 @@
           <ion-card class="program-card" (click)="openPickFeature($event, 'User Defined Activity')">
             <ion-card-header class="ion-no-padding" color="lightgrey">
               <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
-                <ion-icon name="ios-more" color="darkgrey"></ion-icon>
+                <ion-icon ios="ellipsis-horizontal" md="ellipsis-horizontal" color="darkgrey"></ion-icon>
               </ion-row>
             </ion-card-header>
             <div class="program-name dark">More</div>
