--- a/src/app/pages/group/groupchat/groupchat.page.scss
+++ b/src/app/pages/group/groupchat/groupchat.page.scss
@@ -575,7 +575,7 @@ app-groupchat {
   .moreoptions {
     width: 100%;
     max-height: 180px;
-    background-color: rgba(238,238,238,0.5);
+    background-color: var(--ion-color-lightgrey);
     overflow: scroll;
 
     .moreGrid {
