--- a/src/app/pages/main-tab/main-tab.page.html
+++ b/src/app/pages/main-tab/main-tab.page.html
@@ -2,23 +2,23 @@
   <div id="videoSpace"></div>
   <ion-tab-bar slot="bottom" *ngIf="platform.width() < 768">
     <ion-tab-button tab="discover" *ngIf="!userData.defaultProgram" [ngClass]="{'tab-selected': router.url.includes('discover')}">
-      <ion-icon name="md-people"></ion-icon>
+      <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
     </ion-tab-button>
     <ion-tab-button [tab]="'dashboard/insight/' + userData.defaultProgram._id" *ngIf="userData.defaultProgram && userData.UIAdminMode && (userData.defaultProgram.user_list_2.includes(userData.user._id) || userData.defaultProgram.user_list_3.includes(userData.user._id))"  [ngClass]="{'tab-selected': router.url.includes('dashboard')}">
-      <ion-icon name="md-people"></ion-icon>
+      <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
     </ion-tab-button>
     <ion-tab-button [tab]="'discover/home/' + userData.defaultProgram._id" *ngIf="userData.defaultProgram && (!userData.UIAdminMode || ((!userData.defaultProgram.user_list_2 || !userData.defaultProgram.user_list_2.includes(userData.user._id)) && (!userData.defaultProgram.user_list_3 || !userData.defaultProgram.user_list_3.includes(userData.user._id))))"  [ngClass]="{'tab-selected': router.url.includes('discover')}">
-      <ion-icon name="md-people"></ion-icon>
+      <ion-icon ios="people-sharp" md="people-sharp"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="news" *ngIf="!userData.UIAdminMode">
-      <ion-icon name="ios-paper"></ion-icon>
+      <ion-icon name="newspaper"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="myconversations">
       <ion-badge *ngIf="chatService && chatService.connectTabBadge">{{chatService.connectTabBadge}}</ion-badge>
-      <ion-icon name="ios-chatboxes"></ion-icon>
+      <ion-icon name="chatbox"></ion-icon>
     </ion-tab-button>
     <ion-tab-button tab="me">
-      <ion-icon name="md-person"></ion-icon>
+      <ion-icon ios="person-sharp" md="person-sharp"></ion-icon>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
