--- a/src/app/pages/manage/billing/billing.page.html
+++ b/src/app/pages/manage/billing/billing.page.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="modalPage">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{userData.user.churches[userData.currentCommunityIndex].name}}: Billing</ion-title>
   </ion-toolbar>
