--- a/src/app/pages/manage/managecommunities/managecommunities.page.html
+++ b/src/app/pages/manage/managecommunities/managecommunities.page.html
@@ -36,22 +36,22 @@
           <ion-item (click)="clickManageMenu('activities')" *ngIf="restvoStaff">
             <ion-icon slot="start" name="american-football" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'activities')}">Activities</ion-label>
-            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.activities?.length" name="alert"></ion-icon>
+            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.activities?.length" name="alert-circle"></ion-icon>
           </ion-item>
           <ion-item (click)="clickManageMenu('members')">
             <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'members')}">Members</ion-label>
-            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.members?.length" name="alert"></ion-icon>
+            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.members?.length" name="alert-circle"></ion-icon>
           </ion-item>
           <ion-item (click)="clickManageMenu('topics')">
             <ion-icon slot="start" name="chatbubbles" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'topics')}">Topics</ion-label>
-            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.topics?.length" name="alert"></ion-icon>
+            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.topics?.length" name="alert-circle"></ion-icon>
           </ion-item>
           <ion-item (click)="clickManageMenu('groups')">
             <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
             <ion-label [ngClass]="{ 'bold-font': (selectedMenuOption === 'groups')}">Groups</ion-label>
-            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.groups?.length" name="alert"></ion-icon>
+            <ion-icon *ngIf="churchService.abuseReports && churchService.abuseReports.groups?.length" name="alert-circle"></ion-icon>
           </ion-item>
           <ion-item (click)="clickManageMenu('administrators')">
             <ion-icon slot="start" name="key" *ngIf="platform.width() < 768"></ion-icon>
