--- a/src/app/pages/manage/topics/topics.page.html
+++ b/src/app/pages/manage/topics/topics.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()"><ion-icon name="arrow-back"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()"><ion-icon name="arrow-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{userData.user.churches[userData.currentCommunityIndex].name}}: Topics</ion-title>
     <ion-buttons slot="end">
       <ion-button *ngIf="userData && userData.user" (click)="presentPopover($event)">
-        <ion-icon name="more"></ion-icon>
+        <ion-icon ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
